Ajuste da pesquisa de recomendação e adição do botão de favoritar dentro dos detalhes do jogo.